--- a/_posts/2021-06-10-002.html
+++ b/_posts/2021-06-10-002.html
@@ -128,9 +128,9 @@ point.</div>
 <tbody>
 <tr>
 <td align="center" style="font-size:0px;padding:0px;word-break:break-word;">
-<input type="checkbox" id="0494b3f99c229000" class="mj-menu-checkbox" style="display:none !important; max-height:0; visibility:hidden;">
+<input type="checkbox" id="0513236dcd066a57" class="mj-menu-checkbox" style="display:none !important; max-height:0; visibility:hidden;">
 <div class="mj-menu-trigger" style="display:none;max-height:0px;max-width:0px;font-size:0px;overflow:hidden;">
-<label for="0494b3f99c229000" class="mj-menu-label" style="display:block;cursor:pointer;mso-hide:all;-moz-user-select:none;user-select:none;color:white;font-size:30px;font-family:Ubuntu, Helvetica, Arial, sans-serif;text-transform:uppercase;text-decoration:none;line-height:30px;padding:10px;" align="center">
+<label for="0513236dcd066a57" class="mj-menu-label" style="display:block;cursor:pointer;mso-hide:all;-moz-user-select:none;user-select:none;color:white;font-size:30px;font-family:Ubuntu, Helvetica, Arial, sans-serif;text-transform:uppercase;text-decoration:none;line-height:30px;padding:10px;" align="center">
 <span class="mj-menu-icon-open" style="mso-hide:all;">
 &#9776;
 </span>
@@ -1816,8 +1816,7 @@ techcrunch.com
 </tr>
 <tr>
 <td align="center" class="paragraph" style="font-size:0px;padding:5px 0 5px 0;padding-top:20px;word-break:break-word;">
-<div style="font-family:Helvetica, Arial;font-size:14px;line-height:26px;text-align:center;color:#415659;">Do you like this newsletter? So do 1
-other subscribers. Invite others to
+<div style="font-family:Helvetica, Arial;font-size:14px;line-height:26px;text-align:center;color:#415659;">Do you like this newsletter? Invite others to
 <a href="https://theprivacynewsletter.com/" style="text-decoration: none; color: #ff4f64; border-bottom: 2px solid #feccd4;">theprivacynewsletter.com</a>. This email is tracker-free and attaches all images for better
 privacy.</div>
 </td>
