--- a/_posts/2022-02-17-007.html
+++ b/_posts/2022-02-17-007.html
@@ -128,9 +128,9 @@ point.</div>
 <tbody>
 <tr>
 <td align="center" style="font-size:0px;padding:0px;word-break:break-word;">
-<input type="checkbox" id="243c0d421aac7b7e" class="mj-menu-checkbox" style="display:none !important; max-height:0; visibility:hidden;">
+<input type="checkbox" id="e3dd767a9b95b412" class="mj-menu-checkbox" style="display:none !important; max-height:0; visibility:hidden;">
 <div class="mj-menu-trigger" style="display:none;max-height:0px;max-width:0px;font-size:0px;overflow:hidden;">
-<label for="243c0d421aac7b7e" class="mj-menu-label" style="display:block;cursor:pointer;mso-hide:all;-moz-user-select:none;user-select:none;color:white;font-size:30px;font-family:Ubuntu, Helvetica, Arial, sans-serif;text-transform:uppercase;text-decoration:none;line-height:30px;padding:10px;" align="center">
+<label for="e3dd767a9b95b412" class="mj-menu-label" style="display:block;cursor:pointer;mso-hide:all;-moz-user-select:none;user-select:none;color:white;font-size:30px;font-family:Ubuntu, Helvetica, Arial, sans-serif;text-transform:uppercase;text-decoration:none;line-height:30px;padding:10px;" align="center">
 <span class="mj-menu-icon-open" style="mso-hide:all;">
 &#9776;
 </span>
@@ -291,7 +291,7 @@ Twitter
 <tbody>
 <tr>
 <td align="left" style="font-size:0px;padding:5px 0 5px 0;padding-bottom:0;word-break:break-word;">
-<div style="font-family:Helvetica, Arial;font-size:16px;line-height:26px;text-align:left;color:#415659;"><span class="paragraph"><a href="https://blog.simpleanalytics.com/will-google-analytics-be-banned-in-the-eu?utm_source=theprivacynewsletter.com" style="text-decoration: none; color: #ff4f64; border-bottom: 2px solid #feccd4;">Will Google Analytics be banned in the EU? </a></span>
+<div style="font-family:Helvetica, Arial;font-size:16px;line-height:26px;text-align:left;color:#415659;"><span class="paragraph"><a href="https://blog.simpleanalytics.com/will-google-analytics-be-banned-in-the-eu?utm_source=theprivacynewsletter.com" style="text-decoration: none; color: #ff4f64; border-bottom: 2px solid #feccd4;">Will Google Analytics be banned in the EU?</a></span>
 <span class="muted">
 <a href="https://blog.simpleanalytics.com/will-google-analytics-be-banned-in-the-eu?utm_source=theprivacynewsletter.com" style="text-decoration: none; color: #79a0a6;">
 blog.simpleanalytics.com
@@ -395,7 +395,7 @@ blog.simpleanalytics.com
 <tbody>
 <tr>
 <td align="left" style="font-size:0px;padding:5px 0 5px 0;padding-bottom:0;word-break:break-word;">
-<div style="font-family:Helvetica, Arial;font-size:16px;line-height:26px;text-align:left;color:#415659;"><span class="paragraph"><a href="https://www.theverge.com/2022/2/7/22922212/irs-id-me-facial-recognition-end-privacy-concerns?utm_source=theprivacynewsletter.com" style="text-decoration: none; color: #ff4f64; border-bottom: 2px solid #feccd4;">IRS will end use of facial recognition after widespread privacy concerns </a></span>
+<div style="font-family:Helvetica, Arial;font-size:16px;line-height:26px;text-align:left;color:#415659;"><span class="paragraph"><a href="https://www.theverge.com/2022/2/7/22922212/irs-id-me-facial-recognition-end-privacy-concerns?utm_source=theprivacynewsletter.com" style="text-decoration: none; color: #ff4f64; border-bottom: 2px solid #feccd4;">IRS will end use of facial recognition after widespread privacy concerns</a></span>
 <span class="muted">
 <a href="https://www.theverge.com/2022/2/7/22922212/irs-id-me-facial-recognition-end-privacy-concerns?utm_source=theprivacynewsletter.com" style="text-decoration: none; color: #79a0a6;">
 www.theverge.com
@@ -1599,7 +1599,7 @@ privacy.</div>
 <tbody>
 <tr>
 <td style="width:120px;">
-<img loading="lazy" height="auto" src="/Users/adriaan/Developer/simpleanalytics/main/static/images/emails/adriaan-signature.png" style="border:0;border-radius:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="120">
+<img loading="lazy" height="auto" src="https://assets.simpleanalytics.com/newsletter/general/adriaan-signature.png" style="border:0;border-radius:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="120">
 </td>
 </tr>
 </tbody>
