Remove all remote fonts

--- a/_posts/2021-05-12-001.html
+++ b/_posts/2021-05-12-001.html
@@ -32,7 +32,6 @@ issue: "001"
     display: block;
     margin: 13px 0;
   }
-  @import url(https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700);
   @media only screen and (min-width: 480px) {
     .mj-column-per-100 {
       width: 100% !important;
@@ -448,7 +447,7 @@ issue: "001"
                                     user-select: none;
                                     color: white;
                                     font-size: 30px;
-                                    font-family: Ubuntu, Helvetica, Arial,
+                                    font-family: Helvetica, Arial,
                                       sans-serif;
                                     text-transform: uppercase;
                                     text-decoration: none;
